changes to index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,97 @@
-Hello World
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Bargav Jayaraman | Home</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="bootstrap.css">
+		<link rel="stylesheet" href="bootstrap-responsive.css">
+		<link href="webicon.css" rel="stylesheet">
+		<style type="text/css">
+			.footer
+			{
+				position: relative;
+				border-top: 1px solid black;
+				margin-top: -10px;
+				height: 10px;
+				clear:both;
+				padding-top:10px;
+			} 		
+		</style>
+	</head>
+	<body>
+	<div class="container">
+		<div class="row">
+			<center><h3 style="color:#89BC23">Bargav Jayaraman</h3></center>
+		</div>
+		<div class="row">
+			<div class="span3">
+				<a class="btn btn-block" href="index.html">Home</a>
+			</div>
+			<div class="span3">
+				<a class="btn btn-block" href="resume.html">Resume</a>
+			</div>
+			<div class="span3">
+				<a class="btn btn-block" href="projects.html">Projects</a>
+			</div>
+			<div class="span3">
+				<a class="btn btn-block" href="publications.html">Publications</a>
+			</div>
+		</div>
+		<br>
+		<div class="row">
+			<div class="span2">
+				<img src="images/pic.png">
+			</div>
+			<div class="span7">
+				<p>I'm currently working in Accenture Technology Labs, Bangalore along with <a href="https://sites.google.com/site/anuragdwarakanath/">Dr. Anurag Dwarakanath</a> as a Researcher on application of machine learning techniques on problems related to natural language texts. Prior to joining Accenture Technology Labs, I did my Master of Science by Research in Computer Science from <a href="https://www.iiit.ac.in/">IIIT Hyderabad</a> under the guidance of <a href="https://scholar.google.co.in/citations?user=BvG80WkAAAAJ&hl=en">Dr. Bruhadeshwar Bezawada</a>.
+My Master's thesis was on <a href="Thesis.pdf">Privacy Preserving String Pattern Matching on Outsourced Data</a> using Searchable Encryption. Apart from Searchable Encryption, I am also interested in working on general problems related to the fields of applied cryptography and data mining. I have also created a brief literature survey on <a href="related_work_PPML.pdf">Privacy Preserving Machine Learning</a>.
+			</div>
+			<div class="span3">
+				<p><text style="color:#89BC23">Cell:</text>
+				<br>+91-8886011668</p>
+				<p><text style="color:#89BC23">Email:</text>
+				<br>bargav[dot]jayaraman[at]<br>research[dot]iiit[dot]ac[dot]in</p>
+				<p><text style="color:#89BC23">Links:</text>
+				<br>
+				<a href="https://scholar.google.co.in/citations?user=gL3ZkpEAAAAJ&hl=en">Google Scholar</a><br>
+				<a href="https://github.com/bargavjayaraman">Github</a></p>
+			</div>
+		</div><hr>
+		<div class="row">
+			<div class="span3">
+				<p><text style="color:#89BC23">LANGUAGES</text></p>
+				<ul>
+					<li>English</li>
+					<li>Hindi</li>
+					<li>Tamil</li>
+					<li>Telugu</li>
+				</ul>
+			</div>
+			<div class="span6">
+				<p><text style="color:#89BC23">REFERENCES</text></p>
+				<ul>
+					<li><a href="https://scholar.google.co.in/citations?user=BvG80WkAAAAJ&hl=en">Dr. Bruhadeshwar Bezawada</a> (Ex-Assistant Professor, IIIT Hyderabad)</li>
+					<li><a href="http://www.iiit.ac.in/people/faculty/ashokkdas">Dr. Ashok Kumar Das</a> (Assistant Professor, IIIT Hyderabad)</li>
+					<li><a href="http://www.iiit.ac.in/people/faculty/vikram">Dr. Vikram Pudi</a> (Associate Professor, IIIT Hyderabad)</li>
+					<li><a href="http://www3.nd.edu/~cmc/">Dr. Collin McMillan</a>(Assistant Professor, University of Notre Dame)</li>
+					<li><a href="https://sites.google.com/site/anuragdwarakanath/">Dr. Anurag Dwarakanath</a> (Research Principal, Accenture Technology Labs)</li>
+				</ul>
+			</div>
+			<div class="span2">
+				<p><text style="color:#89BC23">RESEARCH INTERESTS</text></p>
+				<ul>
+					<li>Applied Cryptography</li>
+					<li>Information Security</li>
+					<li>Deep Learning</li>
+					<li>Data Mining</li>
+				</ul>
+			</div>
+		</div>
+		<footer class="footer">Last updated: January 2016</footer>
+	</div>
+	<script src="http://code.jquery.com/jquery.js"></script>  
+   	<script src="bootstrap.min.js"></script>
+	</body>
+</html>
+
+
