changes to index

--- a/index.html
+++ b/index.html
@@ -43,50 +43,32 @@
 				<img src="images/pic.png">
 			</div>
 			<div class="span7">
-				<p>I'm currently working in Accenture Technology Labs, Bangalore along with <a href="https://sites.google.com/site/anuragdwarakanath/">Dr. Anurag Dwarakanath</a> as a Researcher on application of machine learning techniques on problems related to natural language texts. Prior to joining Accenture Technology Labs, I did my Master of Science by Research in Computer Science from <a href="https://www.iiit.ac.in/">IIIT Hyderabad</a> under the guidance of <a href="https://scholar.google.co.in/citations?user=BvG80WkAAAAJ&hl=en">Dr. Bruhadeshwar Bezawada</a>.
-My Master's thesis was on <a href="Thesis.pdf">Privacy Preserving String Pattern Matching on Outsourced Data</a> using Searchable Encryption. Apart from Searchable Encryption, I am also interested in working on general problems related to the fields of applied cryptography and data mining. I have also created a brief literature survey on <a href="related_work_PPML.pdf">Privacy Preserving Machine Learning</a>.
+				<p>I'm currently doing PhD in Computer Science at School of Engineering and Applied Science, University of Virginia. I am advised by <a href="https://www.cs.virginia.edu/~evans/">Professor David Evans</a> and my area of research is broadly in Privacy Preserving Machine Learning. Before beginning my doctoral studies, I was working in Accenture Technology Labs, Bangalore as a researcher on application of machine learning on problems related to software engineering. I have done my Master of Science by Research in Computer Science from <a href="https://www.iiit.ac.in/">IIIT Hyderabad</a> where
+my Master's thesis was on <a href="Thesis.pdf">Privacy Preserving String Pattern Matching on Outsourced Data</a> using Searchable Encryption (under the guidance of <a href="https://scholar.google.co.in/citations?user=BvG80WkAAAAJ&hl=en">Dr. Bruhadeshwar Bezawada</a>).
 			</div>
 			<div class="span3">
-				<p><text style="color:#89BC23">Cell:</text>
-				<br>+91-8886011668</p>
+				<p><text style="color:#89BC23">Mobile:</text>
+				<br>(434) 327 0410</p>
 				<p><text style="color:#89BC23">Email:</text>
-				<br>bargav[dot]jayaraman[at]<br>research[dot]iiit[dot]ac[dot]in</p>
+				<br>bargav[dot]jayaraman[at]<br>gmail[dot]com</p>
 				<p><text style="color:#89BC23">Links:</text>
 				<br>
 				<a href="https://scholar.google.co.in/citations?user=gL3ZkpEAAAAJ&hl=en">Google Scholar</a><br>
 				<a href="https://github.com/bargavjayaraman">Github</a></p>
 			</div>
 		</div><hr>
-		<div class="row">
-			<div class="span3">
-				<p><text style="color:#89BC23">LANGUAGES</text></p>
+		<div class="span12">
+				<br>
+				<h4 style="color:#89BC23">LIST OF PUBLICATIONS</h4>
 				<ul>
-					<li>English</li>
-					<li>Hindi</li>
-					<li>Tamil</li>
-					<li>Telugu</li>
+                    <li><b>Aggregating Private Sparse Learning Models Using Multi-Party Computation</b><br>
+                    Lu Tian*, <b>Bargav Jayaraman</b>*, Quanquan Gu and David Evans<br>
+                    In <i>NIPS Workshop on Private Multi-Party Machine Learning</i>, Barcelona, Spain, December 2016. <a href="https://pmpml.github.io/PMPML16/papers/PMPML16_paper_15.pdf">link</a></li>
+					<li><b>Privacy Preserving String Matching for Cloud Computing</b><br>
+					Bruhadeshwar Bezawada, Alex X. Liu, <b>Bargav Jayaraman</b>, Ann L. Wang and Rui Li<br>
+					In <i>Proceedings of the 35th IEEE International Conference on Distributed Computing Systems</i> (ICDCS), Columbus, Ohio, June 2015. <a href="http://s3.amazonaws.com/academia.edu.documents/38297728/PrivacyPreservingPatternSearch_Camera_1.pdf?AWSAccessKeyId=AKIAIWOWYYGZ2Y53UL3A&Expires=1486249677&Signature=DnHVbQ7v80TiB3SWx00SxQYwAWw%3D&response-content-disposition=inline%3B%20filename%3DPrivacy_Preserving_String_Matching_for_C.pdf">link</a></li>
 				</ul>
 			</div>
-			<div class="span6">
-				<p><text style="color:#89BC23">REFERENCES</text></p>
-				<ul>
-					<li><a href="https://scholar.google.co.in/citations?user=BvG80WkAAAAJ&hl=en">Dr. Bruhadeshwar Bezawada</a> (Ex-Assistant Professor, IIIT Hyderabad)</li>
-					<li><a href="http://www.iiit.ac.in/people/faculty/ashokkdas">Dr. Ashok Kumar Das</a> (Assistant Professor, IIIT Hyderabad)</li>
-					<li><a href="http://www.iiit.ac.in/people/faculty/vikram">Dr. Vikram Pudi</a> (Associate Professor, IIIT Hyderabad)</li>
-					<li><a href="http://www3.nd.edu/~cmc/">Dr. Collin McMillan</a>(Assistant Professor, University of Notre Dame)</li>
-					<li><a href="https://sites.google.com/site/anuragdwarakanath/">Dr. Anurag Dwarakanath</a> (Research Principal, Accenture Technology Labs)</li>
-				</ul>
-			</div>
-			<div class="span2">
-				<p><text style="color:#89BC23">RESEARCH INTERESTS</text></p>
-				<ul>
-					<li>Applied Cryptography</li>
-					<li>Information Security</li>
-					<li>Deep Learning</li>
-					<li>Data Mining</li>
-				</ul>
-			</div>
-		</div>
 		<footer class="footer">Last updated: January 2016</footer>
 	</div>
 	<script src="http://code.jquery.com/jquery.js"></script>  
