--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			</div>
 			<div class="span7">
 				<p>I'm currently doing PhD in Computer Science at School of Engineering and Applied Science, University of Virginia. I am advised by <a href="https://www.cs.virginia.edu/~evans/">Professor David Evans</a> and my area of research is broadly in Privacy Preserving Machine Learning. Before beginning my doctoral studies, I was working in Accenture Technology Labs, Bangalore as a researcher on application of machine learning on problems related to software engineering. I have done my Master of Science by Research in Computer Science from <a href="https://www.iiit.ac.in/">IIIT Hyderabad</a> where
-my Master's thesis was on <a href="Thesis.pdf">Privacy Preserving String Pattern Matching on Outsourced Data</a> using Searchable Encryption (under the guidance of <a href="https://scholar.google.co.in/citations?user=BvG80WkAAAAJ&hl=en">Dr. Bruhadeshwar Bezawada</a>).
+my Master's thesis was on Privacy Preserving String Pattern Matching on Outsourced Data (<a href="ms_thesis.pdf">thesis</a>, <a href="ms_thesis_ppt.pdf">ppt</a>) using Searchable Encryption.
 			</div>
 			<div class="span3">
 				<p><text style="color:#89BC23">Mobile:</text>
@@ -58,7 +58,6 @@ my Master's thesis was on <a href="Thesis.pdf">Privacy Preserving String Pattern
 			</div>
 		</div><hr>
 		<div class="span12">
-				<br>
 				<h4 style="color:#89BC23">LIST OF PUBLICATIONS</h4>
 				<ul>
                     <li><b>Aggregating Private Sparse Learning Models Using Multi-Party Computation</b><br>
