added educational info

--- a/index.html
+++ b/index.html
@@ -24,21 +24,6 @@
 			<center><h3 style="color:#89BC23">Bargav Jayaraman</h3></center>
 		</div>
 		<div class="row">
-			<div class="span3">
-				<a class="btn btn-block" href="index.html">Home</a>
-			</div>
-			<div class="span3">
-				<a class="btn btn-block" href="resume.html">Resume</a>
-			</div>
-			<div class="span3">
-				<a class="btn btn-block" href="projects.html">Projects</a>
-			</div>
-			<div class="span3">
-				<a class="btn btn-block" href="publications.html">Publications</a>
-			</div>
-		</div>
-		<br>
-		<div class="row">
 			<div class="span2">
 				<img src="pic.png">
 			</div>
@@ -67,7 +52,107 @@ my Master's thesis was on Privacy Preserving String Pattern Matching on Outsourc
 					Bruhadeshwar Bezawada, Alex X. Liu, <b>Bargav Jayaraman</b>, Ann L. Wang and Rui Li<br>
 					In <i>Proceedings of the 35th IEEE International Conference on Distributed Computing Systems</i> (ICDCS), Columbus, Ohio, June 2015. <a href="http://s3.amazonaws.com/academia.edu.documents/38297728/PrivacyPreservingPatternSearch_Camera_1.pdf?AWSAccessKeyId=AKIAIWOWYYGZ2Y53UL3A&Expires=1486249677&Signature=DnHVbQ7v80TiB3SWx00SxQYwAWw%3D&response-content-disposition=inline%3B%20filename%3DPrivacy_Preserving_String_Matching_for_C.pdf">link</a></li>
 				</ul>
+        </div>
+        <div class="row">
+			<div class="span12"><br>
+				Click here for <a href="resume.pdf">full resume</a>.
 			</div>
+		</div>
+		<div class="row">
+			<div class="span12">
+				<h3>Work Experience</h3>
+			</div>
+			<div class="span12">
+				<h4 style="color:#89BC23">Industrial Experience</h4>
+			</div>
+		</div>
+		<div class="row">
+			<div class="span6">
+				Research and Development Senior Analyst at Accenture Technology Labs, Bangalore.
+			</div>
+			<div class="span5 offset1">
+				[January 2015 - July 2016]
+			</div>
+		</div>
+		<div class="row">
+			<div class="span12">
+				<h4 style="color:#89BC23">Research Assistantships</h4>
+			</div>
+			<div class="span6">
+				Course Content Developement for <a href="http://enhanceedu.iiit.ac.in/">Enhance Edu</a>, IIIT Hyderabad.
+			</div>
+			<div class="span5 offset1">
+				[August 2014 - December 2014]
+			</div>
+		</div>
+		<div class="row">
+			<div class="span6">
+				Android Application Developer at <a href="http://iiith.vlab.co.in/">Virtual Labs</a>, IIIT Hyderabad.
+			</div>
+			<div class="span5 offset1">
+				[August 2013 - November 2013]
+			</div>
+		</div>
+		<div class="row">
+			<div class="span12">
+				<h4 style="color:#89BC23">Teaching Assistantships</h4>
+			</div>
+			<div class="span6">
+				Principles of Information Security, taught by <a href="http://www.iiit.ac.in/people/faculty/ashokkdas">Dr. Ashok Kumar Das</a>.
+			</div>
+			<div class="span5 offset1">
+				Spring 2014
+			</div>
+		</div>
+		<div class="row">
+			<div class="span6">
+				Data Warehousing and Data Mining, taught by <a href="http://www.iiit.ac.in/people/faculty/vikram">Dr. Vikram Pudi</a>.
+			</div>
+			<div class="span5 offset1">
+				Fall 2014
+			</div>
+		</div>
+		<div class="row">
+			<div class="span12">
+				<h3>Achievements</h3>
+				<ul>
+					<li>Filed 3 patents in Accenture Technology Labs</li>
+					<li>One conference paper accepted in ICDCS'15</li>
+					<li>One Workshop paper accepted in NIPS'16</li>
+					<li>Got 753 rank (99.6 percentile) in Graduate Aptitude Test in Engineering (GATE) 2012 conducted by IISC and IIT's</li>
+					<li>Dean's Lister (Top 2-10 %) in 1st year of B.Tech</li>
+				</ul>
+			</div>
+		</div>
+		<div class="row">
+			<div class="span12">
+				<h3>Education</h3>
+			</div>
+            <div class="span12">
+				<a href="http://engineering.virginia.edu"><h4 style="color:#89BC23">University of Virginia</h4></a>
+				<p>2016 - present<br>Pursuing PhD in CS, current GPA of 4/4</p>
+			</div><hr>
+			<div class="span12">
+				<a href="https://www.iiit.ac.in/"><h4 style="color:#89BC23">IIIT Hyderabad</h4></a>
+				<p>2012 - 2015<br>Completed MS by Research in CSE with CGPA of 8.68/10</p>
+			</div><hr>
+			<div class="span12">
+				<a href="http://www.sastra.edu/"><h4 style="color:#89BC23">SASTRA University</h4></a>
+				<p>2008 - 2012<br>Completed B. Tech in CSE with CGPA of 8.58/10</p>
+			</div><hr>
+		<div class="row">
+			<div class="span12">
+				<h4 style="color:#89BC23">Kendriya Vidyalaya AGCR, Delhi</h4>
+				<p>2007 - 2008<br>Completed Senior Secondary (CBSE) with 88.2 %</p>
+			</div>
+		</div><hr>
+		<div class="row">
+			<div class="span12">
+				<h4 style="color:#89BC23">Kendriya Vidyalaya No. 2, Delhi Cantt.</h4>
+				<p>2005 - 2006<br>Completed Higher Secondary (CBSE) with 92.4 %</p>
+			</div>
+		</div>
+        
 		<footer class="footer">Last updated: January 2016</footer>
 	</div>
 	<script src="http://code.jquery.com/jquery.js"></script>  
