--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ my Master's thesis was on Privacy Preserving String Pattern Matching on Outsourc
 				<ul>
 					<li>Filed 3 patents in Accenture Technology Labs</li>
 					<li>One conference paper accepted in ICDCS'15</li>
-					<li>One Workshop paper accepted in NIPS'16</li>
+					<li>One workshop paper accepted in NIPS'16</li>
 					<li>Got 753 rank (99.6 percentile) in Graduate Aptitude Test in Engineering (GATE) 2012 conducted by IISC and IIT's</li>
 					<li>Dean's Lister (Top 2-10 %) in 1st year of B.Tech</li>
 				</ul>
