--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@ my Master's thesis was on Privacy Preserving String Pattern Matching on Outsourc
 				<a href="https://github.com/bargavjayaraman">Github</a></p>
 			</div>
 		</div><hr>
-		<div class="span12">
+        <div class="row">
+		      <div class="span12">
 				<h4 style="color:#89BC23">LIST OF PUBLICATIONS</h4>
 				<ul>
                     <li><b>Aggregating Private Sparse Learning Models Using Multi-Party Computation</b><br>
@@ -52,6 +53,7 @@ my Master's thesis was on Privacy Preserving String Pattern Matching on Outsourc
 					Bruhadeshwar Bezawada, Alex X. Liu, <b>Bargav Jayaraman</b>, Ann L. Wang and Rui Li<br>
 					In <i>Proceedings of the 35th IEEE International Conference on Distributed Computing Systems</i> (ICDCS), Columbus, Ohio, June 2015. <a href="http://s3.amazonaws.com/academia.edu.documents/38297728/PrivacyPreservingPatternSearch_Camera_1.pdf?AWSAccessKeyId=AKIAIWOWYYGZ2Y53UL3A&Expires=1486249677&Signature=DnHVbQ7v80TiB3SWx00SxQYwAWw%3D&response-content-disposition=inline%3B%20filename%3DPrivacy_Preserving_String_Matching_for_C.pdf">link</a></li>
 				</ul>
+            </div>
         </div>
         <div class="row">
 			<div class="span12"><br>
@@ -139,14 +141,6 @@ my Master's thesis was on Privacy Preserving String Pattern Matching on Outsourc
 			<div class="span12">
 				<a href="http://www.sastra.edu/"><h4 style="color:#89BC23">SASTRA University</h4></a>
 				<p>2008 - 2012<br>Completed B. Tech in CSE with CGPA of 8.58/10</p>
-			</div><hr>
-			<div class="span12">
-				<h4 style="color:#89BC23">Kendriya Vidyalaya AGCR, Delhi</h4>
-				<p>2007 - 2008<br>Completed Senior Secondary (CBSE) with 88.2 %</p>
-			</div><hr>
-			<div class="span12">
-				<h4 style="color:#89BC23">Kendriya Vidyalaya No. 2, Delhi Cantt.</h4>
-				<p>2005 - 2006<br>Completed Higher Secondary (CBSE) with 92.4 %</p>
 			</div>
         
 		<footer class="footer">Last updated: February 2017</footer>
