--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<img src="pic.png">
 			</div>
 			<div class="span7">
-				<p>I'm currently doing PhD in Computer Science at School of Engineering and Applied Science, University of Virginia. I am advised by <a href="https://www.cs.virginia.edu/~evans/">Professor David Evans</a> and my area of research is broadly in Privacy Preserving Machine Learning. Before beginning my doctoral studies, I was working in Accenture Technology Labs, Bangalore as a researcher on application of machine learning on problems related to software engineering. I have done my Master of Science by Research in Computer Science from <a href="https://www.iiit.ac.in/">IIIT Hyderabad</a> where
+				<p>I'm currently doing PhD in Computer Science at School of Engineering and Applied Science, University of Virginia. I am advised by <a href="https://www.cs.virginia.edu/~evans/">Professor David Evans</a> and my area of research is broadly in Privacy Preserving Machine Learning (<a href="http://oblivc.org/ppml/">link</a>). Before beginning my doctoral studies, I was working in Accenture Technology Labs, Bangalore as a researcher on application of machine learning on problems related to software engineering. I have done my Master of Science by Research in Computer Science from <a href="https://www.iiit.ac.in/">IIIT Hyderabad</a> where
 my Master's thesis was on Privacy Preserving String Pattern Matching on Outsourced Data (<a href="ms_thesis.pdf">thesis</a>, <a href="ms_thesis_ppt.pdf">ppt</a>) using Searchable Encryption.
 			</div>
 			<div class="span3">
