added link to linkedin profile

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@ my Master's thesis was on Privacy Preserving String Pattern Matching on Outsourc
 				<p><text style="color:#89BC23">Links:</text>
 				<br>
 				<a href="https://scholar.google.co.in/citations?user=gL3ZkpEAAAAJ&hl=en">Google Scholar</a><br>
-				<a href="https://github.com/bargavjayaraman">Github</a></p>
+				<a href="https://github.com/bargavjayaraman">Github</a><br>
+                <a href="https://www.linkedin.com/in/bargav-jayaraman/">Linkedin</a></p>
 			</div>
 		</div><hr>
         <div class="row">
