--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<body>
 	<div class="container">
 		<div class="row">
-			<center><h3 style="color:#89BC23">Bargav Jayaraman</h3></center>
+			<center><h3>Bargav Jayaraman</h3></center>
 		</div>
 		<div class="row">
 			<div class="span2">
@@ -32,11 +32,11 @@
 my Master's thesis was on Privacy Preserving String Pattern Matching on Outsourced Data (<a href="ms_thesis.pdf">thesis</a>, <a href="ms_thesis_ppt.pdf">ppt</a>) using Searchable Encryption.
 			</div>
 			<div class="span3">
-				<p><text style="color:#89BC23">Mobile:</text>
+				<p><text>Mobile:</text>
 				<br>(434) 327 0410</p>
-				<p><text style="color:#89BC23">Email:</text>
+				<p><text>Email:</text>
 				<br>bargav[dot]jayaraman[at]<br>gmail[dot]com</p>
-				<p><text style="color:#89BC23">Links:</text>
+				<p><text>Links:</text>
 				<br>
 				<a href="https://scholar.google.co.in/citations?user=gL3ZkpEAAAAJ&hl=en">Google Scholar</a><br>
 				<a href="https://github.com/bargavjayaraman">Github</a><br>
@@ -45,7 +45,7 @@ my Master's thesis was on Privacy Preserving String Pattern Matching on Outsourc
 		</div><hr>
         <div class="row">
 		      <div class="span12">
-				<h4 style="color:#89BC23">LIST OF PUBLICATIONS</h4>
+				<h4>LIST OF PUBLICATIONS</h4>
 				<ul>
                     <li><b>Aggregating Private Sparse Learning Models Using Multi-Party Computation</b><br>
                     Lu Tian*, <b>Bargav Jayaraman</b>*, Quanquan Gu and David Evans<br>
@@ -98,7 +98,7 @@ my Master's thesis was on Privacy Preserving String Pattern Matching on Outsourc
 		</div>
 		<div class="row">
 			<div class="span12">
-				<h4 style="color:#89BC23">Teaching Assistantships</h4>
+				<h4>Teaching Assistantships</h4>
 			</div>
 			<div class="span6">
 				Principles of Information Security, taught by <a href="http://www.iiit.ac.in/people/faculty/ashokkdas">Dr. Ashok Kumar Das</a>.
@@ -132,15 +132,15 @@ my Master's thesis was on Privacy Preserving String Pattern Matching on Outsourc
 				<h3>Education</h3>
 			</div>
             <div class="span12">
-				<a href="http://engineering.virginia.edu"><h4 style="color:#89BC23">University of Virginia</h4></a>
+				<a href="http://engineering.virginia.edu"><h4>University of Virginia</h4></a>
 				<p>2016 - present<br>Pursuing PhD in CS, current GPA of 4/4</p>
 			</div><hr>
 			<div class="span12">
-				<a href="https://www.iiit.ac.in/"><h4 style="color:#89BC23">IIIT Hyderabad</h4></a>
+				<a href="https://www.iiit.ac.in/"><h4>IIIT Hyderabad</h4></a>
 				<p>2012 - 2015<br>Completed MS by Research in CSE with CGPA of 8.68/10</p>
 			</div><hr>
 			<div class="span12">
-				<a href="http://www.sastra.edu/"><h4 style="color:#89BC23">SASTRA University</h4></a>
+				<a href="http://www.sastra.edu/"><h4>SASTRA University</h4></a>
 				<p>2008 - 2012<br>Completed B. Tech in CSE with CGPA of 8.58/10</p>
 			</div>
         
