--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ my Master's thesis was on Privacy Preserving String Pattern Matching on Outsourc
 				<h3>Work Experience</h3>
 			</div>
 			<div class="span12">
-				<h4 style="color:#89BC23">Industrial Experience</h4>
+				<h4>Industrial Experience</h4>
 			</div>
 		</div>
 		<div class="row">
@@ -79,7 +79,7 @@ my Master's thesis was on Privacy Preserving String Pattern Matching on Outsourc
 		</div>
 		<div class="row">
 			<div class="span12">
-				<h4 style="color:#89BC23">Research Assistantships</h4>
+				<h4>Research Assistantships</h4>
 			</div>
 			<div class="span6">
 				Course Content Developement for <a href="http://enhanceedu.iiit.ac.in/">Enhance Edu</a>, IIIT Hyderabad.
