removed mobile number

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			</div>
 			<div class="span7">
 				<p>I'm currently doing PhD in Computer Science at School of Engineering and Applied Science, University of Virginia. I am advised by <a href="https://www.cs.virginia.edu/~evans/">Professor David Evans</a> and my area of research is broadly in Privacy Preserving Machine Learning (<a href="http://oblivc.org/ppml/">link</a>). Before beginning my doctoral studies, I was working in Accenture Technology Labs, Bangalore as a researcher on application of machine learning on problems related to software engineering. I have done my Master of Science by Research in Computer Science from <a href="https://www.iiit.ac.in/">IIIT Hyderabad</a> where
-my Master's thesis was on Privacy Preserving String Pattern Matching on Outsourced Data (<a href="ms_thesis.pdf">thesis</a>, <a href="ms_thesis_ppt.pdf">ppt</a>) using Searchable Encryption.
+my <a href="ms_thesis.pdf">thesis</a> was on Privacy Preserving String Pattern Matching on Outsourced Data (<a href="ms_thesis_ppt.pdf">ppt</a>) using Searchable Encryption.
 			</div>
 			<div class="span3">
 				<p><text>Email:</text>
@@ -123,7 +123,6 @@ my Master's thesis was on Privacy Preserving String Pattern Matching on Outsourc
 				<ul>
 					<li>Filed 3 patents in Accenture Technology Labs</li>
 					<li>Got 753 rank (99.6 percentile) in Graduate Aptitude Test in Engineering (GATE) 2012 conducted by IISC and IIT's</li>
-					<li>Dean's Lister (Top 2-10 %) in 1st year of B.Tech</li>
 				</ul>
 			</div>
 		</div>
