added DCA arxiv paper

--- a/index.html
+++ b/index.html
@@ -46,17 +46,12 @@ my <a href="ms_thesis.pdf">thesis</a> was on Privacy Preserving String Pattern M
 		      <div class="span12">
 				<h4>LIST OF PUBLICATIONS</h4>
 				<ul>
-                    <li><b>Detecting Vague Words and Phrases in Requirements Documents in a Multilingual Environment</b><br>
-                    Breno Cruz, <b>Bargav Jayaraman</b>, Anurag Dwarakanath and Collin McMillan<br>
-                    In <i>25th International Requirements Engineering Conference (RE'17) Industry Track</i>, Lisbon, Portugal, September 2017.</li>
-                    <li><b>Aggregating Private Sparse Learning Models Using Multi-Party Computation</b><br>
-                    Lu Tian*, <b>Bargav Jayaraman</b>*, Quanquan Gu and David Evans<br>
-                    In <i>NIPS Workshop on Private Multi-Party Machine Learning</i>, Barcelona, Spain, December 2016. <a href="https://pmpml.github.io/PMPML16/papers/PMPML16_paper_15.pdf">link</a></li>
-					<li><b>Privacy Preserving String Matching for Cloud Computing</b><br>
-					Bruhadeshwar Bezawada, Alex X. Liu, <b>Bargav Jayaraman</b>, Ann L. Wang and Rui Li<br>
-					In <i>Proceedings of the 35th IEEE International Conference on Distributed Computing Systems (ICDCS)</i>, Columbus, Ohio, June 2015. <a href="http://s3.amazonaws.com/academia.edu.documents/38297728/PrivacyPreservingPatternSearch_Camera_1.pdf?AWSAccessKeyId=AKIAIWOWYYGZ2Y53UL3A&Expires=1486249677&Signature=DnHVbQ7v80TiB3SWx00SxQYwAWw%3D&response-content-disposition=inline%3B%20filename%3DPrivacy_Preserving_String_Matching_for_C.pdf">link</a></li>
+				<li><b>Decentralized Certificate Authorities</b><br> <b>Bargav Jayaraman</b>, Haina Li and David Evans<br> In <i>arXiv</i>, June 2017. <a href="https://arxiv.org/pdf/1706.03370.pdf">link</a></li>
+				<li><b>Detecting Vague Words and Phrases in Requirements Documents in a Multilingual Environment</b><br> Breno Cruz, <b>Bargav Jayaraman</b>, Anurag Dwarakanath and Collin McMillan<br> In <i>25th International Requirements Engineering Conference (RE'17) Industry Track</i>, Lisbon, Portugal, September 2017.</li>
+				<li><b>Aggregating Private Sparse Learning Models Using Multi-Party Computation</b><br> Lu Tian*, <b>Bargav Jayaraman</b>*, Quanquan Gu and David Evans<br> In <i>NIPS Workshop on Private Multi-Party Machine Learning</i>, Barcelona, Spain, December 2016. <a href="https://pmpml.github.io/PMPML16/papers/PMPML16_paper_15.pdf">link</a></li>
+				<li><b>Privacy Preserving String Matching for Cloud Computing</b><br> Bruhadeshwar Bezawada, Alex X. Liu, <b>Bargav Jayaraman</b>, Ann L. Wang and Rui Li<br> In <i>Proceedings of the 35th IEEE International Conference on Distributed Computing Systems (ICDCS)</i>, Columbus, Ohio, June 2015. <a href="http://s3.amazonaws.com/academia.edu.documents/38297728/PrivacyPreservingPatternSearch_Camera_1.pdf?AWSAccessKeyId=AKIAIWOWYYGZ2Y53UL3A&Expires=1486249677&Signature=DnHVbQ7v80TiB3SWx00SxQYwAWw%3D&response-content-disposition=inline%3B%20filename%3DPrivacy_Preserving_String_Matching_for_C.pdf">link</a></li>
 				</ul>
-            </div>
+			</div>
         </div>
         <div class="row">
 			<div class="span12"><br>
