--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ my <a href="ms_thesis.pdf">thesis</a> was on Privacy Preserving String Pattern M
 			</div>
 			<div class="span3">
 				<p><text>Email:</text>
-				<br>bargav[dot]jayaraman[at]<br>gmail[dot]com</p>
+				<br>bargavjayaraman[at]<br>gmail[dot]com</p>
 				<p><text>Links:</text>
 				<br>
 				<a href="https://scholar.google.co.in/citations?user=gL3ZkpEAAAAJ&hl=en">Google Scholar</a><br>
