--- a/index.html
+++ b/index.html
@@ -132,15 +132,15 @@ my <a href="ms_thesis.pdf">thesis</a> was on Privacy Preserving String Pattern M
 			</div>
             <div class="span12">
 				<a href="http://engineering.virginia.edu"><h4>University of Virginia</h4></a>
-				<p>2016 - present<br>Pursuing PhD in CS, current GPA of 4/4</p>
+				<p>2016 - present<br>Pursuing Doctor of Philosphy in Computer Science, current GPA of 4/4</p>
 			</div><hr>
 			<div class="span12">
 				<a href="https://www.iiit.ac.in/"><h4>IIIT Hyderabad</h4></a>
-				<p>2012 - 2015<br>Completed MS by Research in CSE with CGPA of 8.68/10</p>
+				<p>2012 - 2015<br>Completed Master of Science by Research in Computer Science and Engineering with CGPA of 8.68/10</p>
 			</div><hr>
 			<div class="span12">
 				<a href="http://www.sastra.edu/"><h4>SASTRA University</h4></a>
-				<p>2008 - 2012<br>Completed B. Tech in CSE with CGPA of 8.58/10</p>
+				<p>2008 - 2012<br>Completed Bachelor of Technology in Computer Science and Engineering with CGPA of 8.58/10</p>
 			</div>
         
 		<footer class="footer">Last updated: February 2017</footer>
