--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ my <a href="ms_thesis.pdf">thesis</a> was on Privacy Preserving String Pattern M
 			</div>
             <div class="span12">
 				<a href="http://engineering.virginia.edu"><h4>University of Virginia</h4></a>
-				<p>2016 - present<br>Pursuing Doctor of Philosphy in Computer Science, current GPA of 4/4</p>
+				<p>2016 - present<br>Pursuing Doctor of Philosophy in Computer Science, current GPA of 4/4</p>
 			</div><hr>
 			<div class="span12">
 				<a href="https://www.iiit.ac.in/"><h4>IIIT Hyderabad</h4></a>
