added recent updates

--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@ my <a href="ms_thesis.pdf">thesis</a> was on Privacy Preserving String Pattern M
 			</div>
 		</div><hr>
         <div class="row">
+            <div class="span12">
+                <h4>RECENT UPDATES</h4>
+                <ul>
+                    <li><i>July 13:</i> Our poster on "Decentralized Certificate Authorities" has been accepted at <a href="https://www.usenix.org">USENIX Security</a> 2017, Vancouver BC, Canada</li>
+                </ul>
+            </div>
+        </div>
+        <div class="row">
 		      <div class="span12">
 				<h4>LIST OF PUBLICATIONS</h4>
 				<ul>
