--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</div>
 		<div class="row">
 			<div class="span2">
-				<img src="pic_smoky.jpg">
+				<img src="pics/pic_smoky.jpg">
 			</div>
 			<div class="span7">
 				<p>I'm currently doing PhD in Computer Science at School of Engineering and Applied Science, University of Virginia. I am advised by <a href="https://www.cs.virginia.edu/~evans/">Professor David Evans</a> and my area of research is broadly in Privacy Preserving Machine Learning (<a href="http://oblivc.org/ppml/">link</a>). Before beginning my doctoral studies, I was working in Accenture Technology Labs, Bangalore as a researcher on application of machine learning on problems related to software engineering. I have done my Master of Science by Research in Computer Science from <a href="https://www.iiit.ac.in/">IIIT Hyderabad</a> where
@@ -46,8 +46,9 @@ my <a href="ms_thesis.pdf">thesis</a> was on Privacy Preserving String Pattern M
             <div class="span12">
                 <h4>RECENT UPDATES</h4>
                 <ul>
-                    <li><i>July 13:</i> Our poster on "Decentralized Certificate Authorities" has been accepted at <a href="https://www.usenix.org">USENIX Security</a> 2017, Vancouver BC, Canada.</li>
-                    <li><i>May 12:</i> Our paper on "Detecting Vague Words & Phrases in Requirements Documents in a Multilingual Environment" has been accepted at <a href="http://re2017.org">RE</a> 2017, Lisbon Portugal. This work was done while I was at Accenture Technology Labs.</li>
+                    <li><i>Feb 15, 2018:</i> I finished my PhD Qualifying Examination and now I am a full time PhD Student.</li>
+                    <li><i>July 13, 2017:</i> Our poster on "Decentralized Certificate Authorities" has been accepted at <a href="https://www.usenix.org">USENIX Security</a> 2017, Vancouver BC, Canada.</li>
+                    <li><i>May 12, 2017:</i> Our paper on "Detecting Vague Words & Phrases in Requirements Documents in a Multilingual Environment" has been accepted at <a href="http://re2017.org">RE</a> 2017, Lisbon Portugal. This work was done while I was at Accenture Technology Labs.</li>
                 </ul>
             </div>
         </div>
