added nips paper

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ my <a href="ms_thesis.pdf">thesis</a> was on Privacy Preserving String Pattern M
             <div class="span12">
                 <h4>RECENT UPDATES</h4>
                 <ul>
+                    <li><i>Sep 5, 2018:</i> Our paper on "Distributed Learning without Distress: Privacy-Preserving Empirical Risk Minimization" has been accepted at <a href="https://nips.cc">NIPS</a> 2018, Montreal, Canada.</li>
                     <li><i>Feb 15, 2018:</i> I finished my PhD Qualifying Examination and now I am a full time PhD Student.</li>
                     <li><i>July 13, 2017:</i> Our poster on "Decentralized Certificate Authorities" has been accepted at <a href="https://www.usenix.org">USENIX Security</a> 2017, Vancouver BC, Canada.</li>
                     <li><i>May 12, 2017:</i> Our paper on "Detecting Vague Words & Phrases in Requirements Documents in a Multilingual Environment" has been accepted at <a href="http://re2017.org">RE</a> 2017, Lisbon Portugal. This work was done while I was at Accenture Technology Labs.</li>
@@ -56,6 +57,7 @@ my <a href="ms_thesis.pdf">thesis</a> was on Privacy Preserving String Pattern M
 		      <div class="span12">
 				<h4>LIST OF PUBLICATIONS</h4>
 				<ul>
+                <li><b>Distributed Learning without Distress: Privacy-Preserving Empirical Risk Minimization</b><br> <b>Bargav Jayaraman</b>, Lingxiao Wang, David Evans and Quanquan Gu<br> In <i>Neural Information Processing Systems (NIPS)</i>, Montreal, Canada, December 2018.</li>
 				<li><b>Decentralized Certificate Authorities</b><br> <b>Bargav Jayaraman</b>*, Haina Li* and David Evans<br> In <i>arXiv</i>, June 2017. <a href="https://arxiv.org/pdf/1706.03370.pdf">link</a></li>
 				<li><b>Detecting Vague Words and Phrases in Requirements Documents in a Multilingual Environment</b><br> Breno Cruz, <b>Bargav Jayaraman</b>, Anurag Dwarakanath and Collin McMillan<br> In <i>25th International Requirements Engineering Conference (RE'17) Industry Track</i>, Lisbon, Portugal, September 2017. <a href="https://www3.nd.edu/~cmc/papers/cruz_re_indus17.pdf">link</a></li>
 				<li><b>Aggregating Private Sparse Learning Models Using Multi-Party Computation</b><br> Lu Tian*, <b>Bargav Jayaraman</b>*, Quanquan Gu and David Evans<br> In <i>NIPS Workshop on Private Multi-Party Machine Learning</i>, Barcelona, Spain, December 2016. <a href="https://pmpml.github.io/PMPML16/papers/PMPML16_paper_15.pdf">link</a></li>
