--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@ my <a href="ms_thesis.pdf">thesis</a> was on Privacy Preserving String Pattern M
 			</div>
 		</div><hr>
         <div class="row">
+			<div class="span12"><br>
+				Click here for <a href="resume_bargav.pdf">full resume</a>.
+			</div>
+		</div>
+		<div class="row">
             <div class="span12">
                 <h4>RECENT UPDATES</h4>
                 <ul>
@@ -66,11 +71,6 @@ my <a href="ms_thesis.pdf">thesis</a> was on Privacy Preserving String Pattern M
 			</div>
         </div>
         <div class="row">
-			<div class="span12"><br>
-				Click here for <a href="resume.pdf">full resume</a>.
-			</div>
-		</div>
-		<div class="row">
 			<div class="span12">
 				<h3>Work Experience</h3>
 			</div>
