--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ my <a href="ms_thesis.pdf">thesis</a> was on Privacy Preserving String Pattern M
 			</div>
 		</div><hr>
         <div class="row">
-			<div class="span12"><br>
+			<div class="span12">
 				Click here for <a href="resume_bargav.pdf">full resume</a>.
 			</div>
 		</div>
