added sok arxiv paper

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ my <a href="ms_thesis.pdf">thesis</a> was on Privacy Preserving String Pattern M
 		      <div class="span12">
 				<h4>LIST OF PUBLICATIONS</h4>
 				<ul>
+                <li><b>When Relaxations Go Bad: "Differentially-Private" Machine Learning</b><br> <b>Bargav Jayaraman</b> and David Evans<br> In <i>arXiv</i>, March 2019. <a href="https://arxiv.org/pdf/1902.08874.pdf">link</a></li>
                 <li><b>Distributed Learning without Distress: Privacy-Preserving Empirical Risk Minimization</b><br> <b>Bargav Jayaraman</b>, Lingxiao Wang, David Evans and Quanquan Gu<br> In <i>Neural Information Processing Systems (NIPS)</i>, Montreal, Canada, December 2018. <a href="http://papers.nips.cc/paper/7871-distributed-learning-without-distress-privacy-preserving-empirical-risk-minimization">link</a></li>
 				<li><b>Decentralized Certificate Authorities</b><br> <b>Bargav Jayaraman</b>*, Haina Li* and David Evans<br> In <i>arXiv</i>, June 2017. <a href="https://arxiv.org/pdf/1706.03370.pdf">link</a></li>
 				<li><b>Detecting Vague Words and Phrases in Requirements Documents in a Multilingual Environment</b><br> Breno Cruz, <b>Bargav Jayaraman</b>, Anurag Dwarakanath and Collin McMillan<br> In <i>25th International Requirements Engineering Conference (RE'17) Industry Track</i>, Lisbon, Portugal, September 2017. <a href="https://www3.nd.edu/~cmc/papers/cruz_re_indus17.pdf">link</a></li>
@@ -150,7 +151,7 @@ my <a href="ms_thesis.pdf">thesis</a> was on Privacy Preserving String Pattern M
 				<p>2008 - 2012<br>Completed Bachelor of Technology in Computer Science and Engineering with CGPA of 8.58/10</p>
 			</div>
         
-		<footer class="footer">Last updated: September 2018</footer>
+		<footer class="footer">Last updated: April 2019</footer>
 	</div>
 	<script src="http://code.jquery.com/jquery.js"></script>  
    	<script src="bootstrap.min.js"></script>
