--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@ my <a href="ms_thesis.pdf">thesis</a> was on Privacy Preserving String Pattern M
             <div class="span12">
                 <h4>RECENT UPDATES</h4>
                 <ul>
+                	<li><i>Jun 1, 2019:</i> Our paper on "Evaluating Differentially Private Machine Learning in Practice" has been accepted at <a href="https://www.usenix.org/conference/usenixsecurity19">USENIX Security</a> 2019, Santa Clara, CA, USA.</li>
                     <li><i>Sep 5, 2018:</i> Our paper on "Distributed Learning without Distress: Privacy-Preserving Empirical Risk Minimization" has been accepted at <a href="https://nips.cc">NIPS</a> 2018, Montreal, Canada.</li>
                     <li><i>Feb 15, 2018:</i> I finished my PhD Qualifying Examination and now I am a full time PhD Student.</li>
                     <li><i>July 13, 2017:</i> Our poster on "Decentralized Certificate Authorities" has been accepted at <a href="https://www.usenix.org">USENIX Security</a> 2017, Vancouver BC, Canada.</li>
@@ -62,7 +63,7 @@ my <a href="ms_thesis.pdf">thesis</a> was on Privacy Preserving String Pattern M
 		      <div class="span12">
 				<h4>LIST OF PUBLICATIONS</h4>
 				<ul>
-                <li><b>When Relaxations Go Bad: "Differentially-Private" Machine Learning</b><br> <b>Bargav Jayaraman</b> and David Evans<br> In <i>arXiv</i>, March 2019. <a href="https://arxiv.org/pdf/1902.08874.pdf">link</a></li>
+                <li><b>Evaluating Differentially Private Machine Learning in Practice</b><br> <b>Bargav Jayaraman</b> and David Evans<br> In <i>arXiv</i>, March 2019. <a href="https://arxiv.org/pdf/1902.08874.pdf">link</a></li>
                 <li><b>Distributed Learning without Distress: Privacy-Preserving Empirical Risk Minimization</b><br> <b>Bargav Jayaraman</b>, Lingxiao Wang, David Evans and Quanquan Gu<br> In <i>Neural Information Processing Systems (NIPS)</i>, Montreal, Canada, December 2018. <a href="http://papers.nips.cc/paper/7871-distributed-learning-without-distress-privacy-preserving-empirical-risk-minimization">link</a></li>
 				<li><b>Decentralized Certificate Authorities</b><br> <b>Bargav Jayaraman</b>*, Haina Li* and David Evans<br> In <i>arXiv</i>, June 2017. <a href="https://arxiv.org/pdf/1706.03370.pdf">link</a></li>
 				<li><b>Detecting Vague Words and Phrases in Requirements Documents in a Multilingual Environment</b><br> Breno Cruz, <b>Bargav Jayaraman</b>, Anurag Dwarakanath and Collin McMillan<br> In <i>25th International Requirements Engineering Conference (RE'17) Industry Track</i>, Lisbon, Portugal, September 2017. <a href="https://www3.nd.edu/~cmc/papers/cruz_re_indus17.pdf">link</a></li>
@@ -151,7 +152,7 @@ my <a href="ms_thesis.pdf">thesis</a> was on Privacy Preserving String Pattern M
 				<p>2008 - 2012<br>Completed Bachelor of Technology in Computer Science and Engineering with CGPA of 8.58/10</p>
 			</div>
         
-		<footer class="footer">Last updated: April 2019</footer>
+		<footer class="footer">Last updated: June 2019</footer>
 	</div>
 	<script src="http://code.jquery.com/jquery.js"></script>  
    	<script src="bootstrap.min.js"></script>
