--- a/index.html
+++ b/index.html
@@ -128,8 +128,10 @@ my <a href="ms_thesis.pdf">thesis</a> was on Privacy Preserving String Pattern M
 		</div>
 		<div class="row">
 			<div class="span12">
-				<h3>Achievements</h3>
+				<h3>Awards and Achievements</h3>
 				<ul>
+                    <li>Awarded Student Travel Grant for attending USENIX Security 2019</li>
+                    <li>Awarded Student Travel Grant for attending NeurIPS 2018</li>
 					<li>Filed 3 patents in Accenture Technology Labs</li>
 					<li>Got 753 rank (99.6 percentile) in Graduate Aptitude Test in Engineering (GATE) 2012 conducted by IISC and IIT's</li>
 				</ul>
