added presentation slides for usenix talk

--- a/publication/index.html
+++ b/publication/index.html
@@ -500,7 +500,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://www.cs.virginia.edu/~evans/pubs/usenix2019/evaluatingdp.pdf" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://arxiv.org/pdf/1902.08874.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
@@ -531,21 +531,13 @@
 
 
 
-  
-  
-    
-  
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/#" target="_blank" rel="noopener">
-  Poster
-</a>
-
 
 
   
   
     
   
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/#" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/files/evaluating_dpml_presentation.pdf" target="_blank" rel="noopener">
   Slides
 </a>
 
