--- a/publication/evaluating-dpml/index.html
+++ b/publication/evaluating-dpml/index.html
@@ -548,7 +548,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1" href="https://www.cs.virginia.edu/~evans/pubs/usenix2019/evaluatingdp.pdf" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="https://arxiv.org/pdf/1902.08874.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
@@ -579,21 +579,13 @@
 
 
 
-  
-  
-    
-  
-<a class="btn btn-outline-primary my-1 mr-1" href="/#" target="_blank" rel="noopener">
-  Poster
-</a>
-
 
 
   
   
     
   
-<a class="btn btn-outline-primary my-1 mr-1" href="/#" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="/files/evaluating_dpml_presentation.pdf" target="_blank" rel="noopener">
   Slides
 </a>
 
