--- a/publication/dp-erm/index.html
+++ b/publication/dp-erm/index.html
@@ -674,7 +674,11 @@
 
 <div class="article-tags">
   
-  <a class="badge badge-light" href="/tags/source-themes/">Source Themes</a>
+  <a class="badge badge-light" href="/tags/machine-learning/">Machine Learning</a>
+  
+  <a class="badge badge-light" href="/tags/differential-privacy/">Differential Privacy</a>
+  
+  <a class="badge badge-light" href="/tags/multi-party-computation/">Multi-Party Computation</a>
   
 </div>
 
