--- a/publication/dca/index.html
+++ b/publication/dca/index.html
@@ -661,7 +661,9 @@
 
 <div class="article-tags">
   
-  <a class="badge badge-light" href="/tags/source-themes/">Source Themes</a>
+  <a class="badge badge-light" href="/tags/multi-party-computation/">Multi-Party Computation</a>
+  
+  <a class="badge badge-light" href="/tags/certificate-authority/">Certificate Authority</a>
   
 </div>
 
