--- a/publication/searchable-encryption/index.html
+++ b/publication/searchable-encryption/index.html
@@ -647,7 +647,7 @@
 
 <div class="article-tags">
   
-  <a class="badge badge-light" href="/tags/source-themes/">Source Themes</a>
+  <a class="badge badge-light" href="/tags/searchable-encryption/">Searchable Encryption</a>
   
 </div>
 
