--- a/publication/vagueness/index.html
+++ b/publication/vagueness/index.html
@@ -639,7 +639,9 @@
 
 <div class="article-tags">
   
-  <a class="badge badge-light" href="/tags/source-themes/">Source Themes</a>
+  <a class="badge badge-light" href="/tags/machine-learning/">Machine Learning</a>
+  
+  <a class="badge badge-light" href="/tags/nlp/">NLP</a>
   
 </div>
 
