--- a/publication/model-aggregation/index.html
+++ b/publication/model-aggregation/index.html
@@ -653,7 +653,9 @@
 
 <div class="article-tags">
   
-  <a class="badge badge-light" href="/tags/source-themes/">Source Themes</a>
+  <a class="badge badge-light" href="/tags/machine-learning/">Machine Learning</a>
+  
+  <a class="badge badge-light" href="/tags/multi-party-computation/">Multi-Party Computation</a>
   
 </div>
 
