--- a/publication/evaluating-dpml/index.html
+++ b/publication/evaluating-dpml/index.html
@@ -579,6 +579,14 @@
 
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1" href="/files/evaluating_dpml_poster.pdf" target="_blank" rel="noopener">
+  Poster
+</a>
+
 
 
   
