edited paper summary

--- a/project/evaluating-dpml/index.html
+++ b/project/evaluating-dpml/index.html
@@ -840,7 +840,7 @@
 
     
     <div class="article-style" itemprop="articleBody">
-      We propose novel membership inference attack and a threshold selection procedure to improve existing threshold based membership …
+      We propose novel membership inference attack and a threshold selection procedure to improve the existing attacks.
     </div>
     
 
