--- a/project/ppml/index.html
+++ b/project/ppml/index.html
@@ -767,7 +767,7 @@
 
     
     <div class="article-style" itemprop="articleBody">
-      We propose novel differentially private algorithms for efficient non-convex empirical risk minimization that significantly improve the …
+      We propose differentially private algorithm for non-convex empirical risk minimization with reduced gradient complexity.
     </div>
     
 
