--- a/publication/index.html
+++ b/publication/index.html
@@ -488,7 +488,7 @@
 
 
 
-  <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/admin/">Bargav Jayaraman</a></span>, <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/lingxiao-wang/">Lingxiao Wang</a></span>, <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/david-evans/">David Evans</a></span>, <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/quanquan-gu/">Quanquan Gu</a></span>
+  <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/admin/">Bargav Jayaraman</a></span>, <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/lingxiao-wang/">Lingxiao Wang</a></span>, <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/katherine-knipmeyer/">Katherine Knipmeyer</a></span>, <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/david-evans/">David Evans</a></span>, <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/quanquan-gu/">Quanquan Gu</a></span>
 
   </span>
   (2020).
