updated authors for DCA

--- a/publication/index.html
+++ b/publication/index.html
@@ -962,7 +962,7 @@
 
 
 
-  <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/admin/">Bargav Jayaraman</a></span>
+  <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/admin/">Bargav Jayaraman</a></span>, <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/hannah-li/">Hannah Li</a></span>, <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/david-evans/">David Evans</a></span>
 
   </span>
   (2017).
