--- a/publication/revisiting-ai/index.html
+++ b/publication/revisiting-ai/index.html
@@ -583,6 +583,14 @@
 
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1" href="https://youtu.be/iLy0C5DK2T8" target="_blank" rel="noopener">
+  Video
+</a>
+
 
 
 
