minor change to thesis project

--- a/publication/index.html
+++ b/publication/index.html
@@ -631,6 +631,12 @@
 
 
 
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/evaluating-dpml/">
+    Project
+  </a>
+  
+
 
 
 
