added paper slides

--- a/index.html
+++ b/index.html
@@ -2237,6 +2237,14 @@
 
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/files/revisiting_ai_presentation.pdf" target="_blank" rel="noopener">
+  Slides
+</a>
+
 
 
   
@@ -2470,6 +2478,14 @@
 
 
 
+
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/files/revisiting_mi_presentation.pdf" target="_blank" rel="noopener">
+  Slides
+</a>
 
 
 
