--- a/project/evaluating-dpml/index.html
+++ b/project/evaluating-dpml/index.html
@@ -1223,6 +1223,14 @@
 
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/files/revisiting_ai_presentation.pdf" target="_blank" rel="noopener">
+  Slides
+</a>
+
 
 
   
@@ -1456,6 +1464,14 @@
 
 
 
+
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/files/revisiting_mi_presentation.pdf" target="_blank" rel="noopener">
+  Slides
+</a>
 
 
 
