--- a/publication/index.html
+++ b/publication/index.html
@@ -553,6 +553,14 @@
 
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/files/revisiting_ai_presentation.pdf" target="_blank" rel="noopener">
+  Slides
+</a>
+
 
 
   
@@ -728,6 +736,14 @@
 
 
 
+
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/files/revisiting_mi_presentation.pdf" target="_blank" rel="noopener">
+  Slides
+</a>
 
 
 
