--- a/publication/revisiting-ai/index.html
+++ b/publication/revisiting-ai/index.html
@@ -581,6 +581,14 @@
 
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1" href="/files/revisiting_ai_presentation.pdf" target="_blank" rel="noopener">
+  Slides
+</a>
+
 
 
   
